# capytain

./: .gitattributes  .gitignore  AGENTS.md  BUNDLE_README.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DESIGN.md  PHASE_0.md  PHASE_1.md  PHASE_2.md  README.md  REUSE.toml  TRAITS.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/agents/: product-owner.md  project-manager.md  software-architect.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backend_factory.rs  imap_idle.rs  jmap_push.rs  linux_gtk.rs  mailto.rs  main.rs  reconnect.rs  renderer_bridge.rs  state.rs  sync_engine.rs  tray.rs
apps/desktop/src-tauri/src/commands/: accounts.rs  compose.rs  contacts.rs  drafts.rs  folders.rs  history_sync.rs  messages.rs  mod.rs  reader.rs  settings.rs
apps/desktop/ui/: Cargo.toml  Dioxus.toml  index.html
apps/desktop/ui/assets/: tailwind.css
apps/desktop/ui/src/: app.rs  format.rs  host_log.rs  keyboard.rs  lib.rs  main.rs  oauth_add.rs  reader_only.rs  reply.rs  settings.rs  threading.rs
apps/mailcli/: Cargo.toml
apps/mailcli/src/: main.rs
crates/auth/: Cargo.toml  build.rs
crates/auth/src/: error.rs  flow.rs  keyring.rs  lib.rs  loopback.rs  pkce.rs  provider.rs  refresh.rs  tokens.rs
crates/auth/src/providers/: fastmail.rs  gmail.rs  mod.rs
crates/auth/tests/: oauth_loopback_flow.rs
crates/auth/tests/mock_oauth/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  draft.rs  error.rs  folder.rs  ids.rs  lib.rs  link_cleaner.rs  mail_backend.rs  message.rs  reader_html.rs  renderer.rs  sync_state.rs
crates/core/tests/: serde_roundtrip.rs
crates/imap-client/: Cargo.toml
crates/imap-client/src/: auth.rs  backend.rs  capabilities.rs  idle.rs  lib.rs  sync_state.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: error.rs  lib.rs
crates/jmap-client/: Cargo.toml
crates/jmap-client/src/: lib.rs  push.rs
crates/mime/: Cargo.toml
crates/mime/src/: compose.rs  lib.rs  remote_content.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  servo.rs
crates/renderer/src/servo/: corpus.rs  delegate.rs  linux.rs  macos.rs  windows.rs
crates/renderer/tests/: corpus.rs
crates/renderer/tests/corpus/fixtures/: 01_plaintext.html  02_gmail_marketing.html  03_substack_newsletter.html  04_stripe_receipt.html  05_github_notification.html  06_mailchimp_promo.html  07_calendar_invite.html  08_ios_mail_forward.html  09_outlook_vml.html  10_cjk_rtl.html
crates/renderer/tests/corpus/reference/: 01_plaintext.sha256  02_gmail_marketing.sha256  03_substack_newsletter.sha256  04_stripe_receipt.sha256  05_github_notification.sha256  06_mailchimp_promo.sha256  07_calendar_invite.sha256  08_ios_mail_forward.sha256  09_outlook_vml.sha256  10_cjk_rtl.sha256
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/smtp-client/: Cargo.toml
crates/smtp-client/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_remote_content_opt_ins.sql  0003_threading_columns.sql  0004_drafts.sql  0005_search_fts.sql  0006_contacts.sql  0007_app_settings.sql  0008_outbox_dedup.sql  0009_drafts_server_id.sql  0010_history_sync.sql  0011_account_cascade_repair.sql  0012_restore_fts.sql  0013_unread_column.sql  0014_messages_id_thread_index.sql  0015_messages_folder_id_covering.sql  0016_apply_chunk_wide_covering.sql  0017_drop_narrow_id_thread_index.sql  0017_replace_folder_id_with_folder_date_id.sql  0018_messages_account_rfc822_thread_covering.sql
crates/storage/src/: blobs.rs  conn.rs  lib.rs  migrations.rs  turso_conn.rs
crates/storage/src/repos/: accounts.rs  app_settings.rs  attachments.rs  contacts.rs  drafts.rs  folders.rs  history_sync.rs  json.rs  messages.rs  mod.rs  outbox.rs  remote_content_opt_ins.rs  search.rs  sync_states.rs  threads.rs
crates/storage/tests/: explain_plans.rs  roundtrip.proptest-regressions  roundtrip.rs
crates/sync/: Cargo.toml
crates/sync/src/: history.rs  lib.rs  outbox_drain.rs  threading.rs
crates/sync/tests/: outbox_drain.rs  sync_folder.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  slow.rs
crates/telemetry/tests/: slow.rs
docs/: KNOWN_ISSUES.md  PROJECT_SPEC.md  QSL_ACCOUNT_SETUP_SPEC.md  QSL_BACKLOG_FIXES.md  QSL_MCP_SERVER_SPEC.md  USER_TODO.md  audit_report.md  release-1-feature-gap.md  servo-composition.md  servo-tombstone.md  ui-direction.md  week-6-day-2-notes.md  week-6-day-4-gtk-integration.md
docs/dependencies/: fastmail.md  turso.md
docs/plans/: post-phase-2.md
docs/product/: BACKLOG.md  proposals-2026-05-01.md
docs/releases/: v0.1.0.md
docs/security/: audit-2026-05-01.md
docs/superpowers/plans/: 2026-04-27-reader-popup-window.md
docs/superpowers/specs/: 2026-05-01-drag-and-drop-design.md  2026-05-03-imap-turso-diagnostic-logging-design.md
docs/upstream/: surfman-explicit-sync.md
xtask/: Cargo.toml
xtask/src/: main.rs
