# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/imap-client",
    "crates/smtp-client",
    "crates/jmap-client",
    "crates/mime",
    "crates/sync",
    "crates/search",
    "crates/auth",
    "crates/ipc",
    "crates/renderer",
    "crates/telemetry",
    "apps/desktop/src-tauri",
    "apps/desktop/ui",
    "apps/mailcli",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/johnathonfox/capytain"
authors = ["Capytain Contributors"]
publish = false

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
capytain-ipc = { path = "crates/ipc", version = "=0.0.0" }
capytain-mime = { path = "crates/mime", version = "=0.0.0" }
capytain-renderer = { path = "crates/renderer", version = "=0.0.0" }
dioxus = { version = "0.7" }
jmap-client = { version = "0.4", default-features = false, features = ["async"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "async-secret-service", "crypto-rust", "tokio"] }
mail-parser = "0.11"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", default-features = false, features = ["wry", "tray-icon"] }
tauri-build = { version = "2", default-features = false }
tauri-plugin-log = { version = "2", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
turso = "0.5"
url = { version = "2", features = ["serde"] }
webbrowser = "1"
webpki-roots = "1"
zstd = { version = "0.13", default-features = false }

# Dev-only: property-testing for the storage layer round-trip suite.
proptest = "1"

# First-party workspace crates — reference by path so members always build
# against the in-tree version. The `version` pin matches `[workspace.package]`
# and gives cargo-deny a concrete version to check (it treats a bare
# `{ path = ... }` as a wildcard dep otherwise); `publish = false` means the
# version is only ever used as local metadata.
capytain-auth = { path = "crates/auth", version = "=0.0.0" }
capytain-core = { path = "crates/core", version = "=0.0.0" }
capytain-imap-client = { path = "crates/imap-client", version = "=0.0.0" }
capytain-jmap-client = { path = "crates/jmap-client", version = "=0.0.0" }
capytain-storage = { path = "crates/storage", version = "=0.0.0" }
capytain-telemetry = { path = "crates/telemetry", version = "=0.0.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
