# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/imap-client",
    "crates/smtp-client",
    "crates/jmap-client",
    "crates/mime",
    "crates/sync",
    "crates/search",
    "crates/auth",
    "crates/ipc",
    "crates/renderer",
    "crates/telemetry",
    "apps/desktop/src-tauri",
    "apps/desktop/ui",
    "apps/mailcli",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/johnathonfox/capytain"
authors = ["Capytain Contributors"]
publish = false

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
capytain-ipc = { path = "crates/ipc", version = "=0.0.0" }
capytain-mime = { path = "crates/mime", version = "=0.0.0" }
capytain-renderer = { path = "crates/renderer", version = "=0.0.0", default-features = false }
dioxus = { version = "0.7" }
jmap-client = { version = "0.4", default-features = false, features = ["async"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "async-secret-service", "crypto-rust", "tokio"] }
mail-parser = "0.11"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", default-features = false, features = ["wry", "tray-icon"] }
tauri-build = { version = "2", default-features = false }
tauri-plugin-log = { version = "2", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
# `default-features = false` drops turso's bundled mimalloc
# `#[global_allocator]`, which would otherwise conflict at link time
# with `servo_allocator`'s jemalloc global allocator inside
# `capytain-desktop`. We keep `sync` because `capytain-storage` drives
# the sync SDK. See docs/week-6-day-2-notes.md.
turso = { version = "0.5", default-features = false, features = ["sync"] }
url = { version = "2", features = ["serde"] }
webbrowser = "1"
webpki-roots = "1"
zstd = { version = "0.13", default-features = false }

# Servo + friends — behind the `servo` feature on `capytain-renderer`.
# servo 0.1.0 (2026-04-13) has no `lts` feature; the crate is versioned 0.1.0
# and tracks semver. docs/servo-composition.md §8 called verifying the LTS
# feature name an open question; resolved: there isn't one. Pin `~0.1.0`
# (compatible updates only) so the half-yearly migration windows envisioned
# in §8 still apply, via cargo's SemVer caret default on 0.x.
servo = "0.1"
raw-window-handle = "0.6"
dpi = "0.1"
# Servo's WebView::take_screenshot returns `image::RgbaImage`; the
# renderer's Day 5 corpus harness uses that type directly. Pinned to
# `=0.25.10` because Servo 0.1.0 locks `image = 0.25.10` in its own
# Cargo.lock — keep our resolution on the same version so
# `image::RgbaImage` is the same type Servo is handing us.
image = { version = "=0.25.10", default-features = false, features = ["png"] }

# Dev-only: property-testing for the storage layer round-trip suite.
proptest = "1"

# First-party workspace crates — reference by path so members always build
# against the in-tree version. The `version` pin matches `[workspace.package]`
# and gives cargo-deny a concrete version to check (it treats a bare
# `{ path = ... }` as a wildcard dep otherwise); `publish = false` means the
# version is only ever used as local metadata.
capytain-auth = { path = "crates/auth", version = "=0.0.0" }
capytain-core = { path = "crates/core", version = "=0.0.0" }
capytain-imap-client = { path = "crates/imap-client", version = "=0.0.0" }
capytain-jmap-client = { path = "crates/jmap-client", version = "=0.0.0" }
capytain-storage = { path = "crates/storage", version = "=0.0.0" }
capytain-telemetry = { path = "crates/telemetry", version = "=0.0.0" }

[workspace.lints.rust]
# `deny` (rather than `forbid`) so narrow, documented `#[allow(unsafe_code)]`
# escapes are possible in crates that cross FFI boundaries — specifically
# `apps/desktop/src-tauri/src/linux_gtk.rs`, which extracts raw Wayland /
# X11 handles from GTK for Servo's `WindowRenderingContext`. Every such
# allowance must include a SAFETY comment at the unsafe block.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
