# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/imap-client",
    "crates/smtp-client",
    "crates/jmap-client",
    "crates/mime",
    "crates/sync",
    "crates/search",
    "crates/auth",
    "crates/ipc",
    "crates/telemetry",
    "apps/desktop/src-tauri",
    "apps/desktop/ui",
    "apps/mailcli",
    "xtask",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/johnathonfox/qsl"
authors = ["QSL Contributors"]
publish = false

[workspace.dependencies]
# `adblock` (brave/adblock-rust) powers the remote-content-blocking
# engine for the reader pane. Phase 1 Week 8 ships it with a small
# curated filter list covering the common trackers; full EasyList /
# EasyPrivacy / uBlock-unbreak bundling lands as a follow-up when we
# pick a strategy (compile-time include vs first-launch fetch).
# `embedded-domain-resolver` bundles the Mozilla Public Suffix List
# so the engine can compute third-party-ness without a runtime
# callback. Adds some KB to the binary; worth it for "just works."
adblock = { version = "0.12", default-features = false, features = ["embedded-domain-resolver"] }
ammonia = "4"
async-trait = "0.1"
base64 = "0.22"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
qsl-ipc = { path = "crates/ipc", version = "=0.1.1" }
qsl-mime = { path = "crates/mime", version = "=0.1.1" }
dioxus = { version = "=0.7.6" }
jmap-client = { version = "0.4", default-features = false, features = ["async"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "async-secret-service", "crypto-rust", "tokio"] }
# `lettre` powers SMTP submission for Gmail (Phase 2 Week 18). We pin
# `default-features = false` to drop `native-tls` + `hostname` in
# favor of an explicit rustls + ring stack so the desktop binary's
# `rustls::crypto::ring::default_provider().install_default()` call
# at startup matches everything in the dep graph (see
# docs/week-6-day-2-notes.md and `qsl_desktop::main`). `pool` is
# enabled for the default short-lived-but-not-single-shot ergonomics.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "pool"] }
mail-builder = "0.4"
mail-parser = "0.11"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", default-features = false, features = ["wry", "tray-icon"] }
tauri-build = { version = "2", default-features = false }
tauri-plugin-log = { version = "2", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
# `default-features = false` drops turso's bundled mimalloc
# `#[global_allocator]`, which would otherwise conflict at link time
# with `servo_allocator`'s jemalloc global allocator inside
# `qsl-desktop`. We keep `sync` because `qsl-storage` drives
# the sync SDK. See docs/week-6-day-2-notes.md.
turso = { version = "0.5", default-features = false, features = ["sync"] }
# `turso_core` is pulled in transitively via `turso` → `turso_sdk_kit` →
# `turso_core`; we declare it here as a sibling dep purely to opt into
# the `fts` feature flag (Tantivy-backed full-text search,
# experimental in 0.5.3 — see docs/dependencies/turso.md). Cargo
# unifies features additively across all consumers, so this turns
# `fts` on without disturbing the feature set turso_sdk_kit already
# requested. The crate isn't imported directly from any code; the
# `CREATE INDEX … USING fts(...)` syntax used in the search migration
# is what surfaces the feature.
turso_core = { version = "0.5", features = ["fts"] }
url = { version = "2", features = ["serde"] }
webbrowser = "1"
webpki-roots = "1"
# `zeroize` wipes secret-bearing buffers on drop. Used by the auth
# crate's `AccessToken` / `RefreshToken` newtypes so token bytes don't
# linger on the freelist after the value goes out of scope. `String`
# is supported via the default `alloc` feature.
zeroize = "1"
zstd = { version = "0.13", default-features = false }

# Dev-only: property-testing for the storage layer round-trip suite.
proptest = "1"

# First-party workspace crates — reference by path so members always build
# against the in-tree version. The `version` pin matches `[workspace.package]`
# and gives cargo-deny a concrete version to check (it treats a bare
# `{ path = ... }` as a wildcard dep otherwise); `publish = false` means the
# version is only ever used as local metadata.
qsl-auth = { path = "crates/auth", version = "=0.1.1" }
qsl-core = { path = "crates/core", version = "=0.1.1" }
qsl-imap-client = { path = "crates/imap-client", version = "=0.1.1" }
qsl-jmap-client = { path = "crates/jmap-client", version = "=0.1.1" }
qsl-search = { path = "crates/search", version = "=0.1.1" }
qsl-smtp-client = { path = "crates/smtp-client", version = "=0.1.1" }
qsl-storage = { path = "crates/storage", version = "=0.1.1" }
qsl-sync = { path = "crates/sync", version = "=0.1.1" }
qsl-telemetry = { path = "crates/telemetry", version = "=0.1.1" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
