# SPDX-License-Identifier: Apache-2.0

[package]
name = "xtask"
description = "QSL build, release, and maintenance scripts. Invoke via `cargo xtask`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true
