# SPDX-License-Identifier: Apache-2.0

[package]
name = "mailcli"
description = "Capytain headless protocol CLI used during Phase 0 as a forcing function for crate boundaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "mailcli"
path = "src/main.rs"

[dependencies]
capytain-auth = { workspace = true }
capytain-core = { workspace = true }
capytain-storage = { workspace = true }
capytain-telemetry = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
