# SPDX-License-Identifier: Apache-2.0

[package]
name = "mailcli"
description = "QSL headless protocol CLI used during Phase 0 as a forcing function for crate boundaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "mailcli"
path = "src/main.rs"

[dependencies]
qsl-auth = { workspace = true }
qsl-core = { workspace = true }
qsl-imap-client = { workspace = true }
qsl-jmap-client = { workspace = true }
qsl-mime = { workspace = true }
qsl-storage = { workspace = true }
qsl-sync = { workspace = true }
qsl-telemetry = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
# Same rustls story as `qsl-desktop/src-tauri` (see its Cargo.toml
# comment): both `ring` and `aws-lc-rs` end up in the graph
# transitively, so rustls refuses to auto-pick a `CryptoProvider` and
# panics on the first HTTPS call. Install `ring` explicitly at startup.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
