# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-auth"
description = "Capytain OAuth2+PKCE flows and keyring-backed token storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
