# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-auth"
description = "Capytain OAuth2+PKCE flows and keyring-backed token storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
capytain-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }

[lints]
workspace = true
