# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-auth"
description = "QSL OAuth2+PKCE flows and keyring-backed token storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
build = "build.rs"

[build-dependencies]
# Load client IDs / secrets from `.env` at the workspace root so the
# maintainer doesn't re-export `QSL_{PROVIDER}_CLIENT_{ID,SECRET}`
# every `cargo build`. See `build.rs` for the precedence rules.
dotenvy = "0.15"

[dependencies]
qsl-core = { workspace = true }
qsl-ipc = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }

[lints]
workspace = true
