# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-core"
description = "QSL domain types, errors, and core traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
# `dpi::PhysicalSize` lives in the EmailRenderer trait so the core
# crate can express a host-widget resize without taking a runtime
# dep on Servo or any platform-specific surface type.
dpi = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
