# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-imap-client"
description = "Capytain IMAP adapter: MailBackend implementation over async-imap."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
