# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-imap-client"
description = "QSL IMAP adapter: MailBackend implementation over async-imap."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
qsl-core = { workspace = true }
qsl-mime = { workspace = true }
async-imap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
imap-proto = "0.16"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
