# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-ipc"
description = "Capytain IPC types shared between the Tauri shell and the Dioxus UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
