# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-ipc"
description = "Capytain IPC types shared between the Tauri shell and the Dioxus UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
capytain-auth = { workspace = true }
capytain-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
