# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-ipc"
description = "QSL IPC types shared between the Tauri shell and the Dioxus UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# NB: no dep on `qsl-auth` — that crate pulls tokio / mio /
# keyring, which don't compile for wasm32-unknown-unknown. The
# `AuthError → IpcError` conversion lives on the `qsl-auth` side
# so this crate can ride in the Dioxus WASM bundle.
qsl-core = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
