# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-jmap-client"
description = "Capytain JMAP adapter: MailBackend implementation over jmap-client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
capytain-core = { workspace = true }
async-trait = { workspace = true }
jmap-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
