# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-mime"
description = "Capytain MIME parse and build helpers on top of mail-parser and mail-builder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ammonia = { workspace = true }
capytain-core = { workspace = true }
chrono = { workspace = true }
mail-parser = { workspace = true }

[lints]
workspace = true
