# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-renderer"
description = "Servo-backed implementation of the EmailRenderer trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# `servo` enables the native Servo-backed `EmailRenderer` implementation.
# Default-on so the desktop app gets the real renderer without extra feature
# flags. Turning it off leaves `capytain-renderer` as an empty library, which
# is useful for downstream crates that depend on the trait via
# `capytain-core` only and want to avoid the Servo toolchain (cmake, clang,
# gstreamer, ~15 GB of build artifacts — see `docs/servo-composition.md` §7).
default = ["servo"]
servo = [
    "dep:servo",
    "dep:raw-window-handle",
    "dep:dpi",
    "dep:tracing",
    "dep:url",
    "dep:thiserror",
]

[dependencies]
capytain-core = { workspace = true }

# Optional — pulled in by the `servo` feature.
servo = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
dpi = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[lints]
workspace = true
