# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-renderer"
description = "Servo-backed implementation of the EmailRenderer trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[features]
# `servo` enables the native Servo-backed `EmailRenderer` implementation.
# Kept OFF by default at the renderer level so `cargo check --workspace`
# on a machine without the Servo toolchain still succeeds. The desktop
# app (`apps/desktop/src-tauri`) enables this feature unconditionally
# via a dep-level `features = ["servo"]`, so end users still get the
# real renderer without passing any extra flags.
#
# Turning the feature off leaves `capytain-renderer` as an empty library
# that re-exports `capytain_core::NullRenderer`, which is useful for:
# (a) downstream crates that depend on the trait via `capytain-core`
# only and want to avoid Servo's cmake / clang / gstreamer / ~15 GB
# build-artifact toolchain (see `docs/servo-composition.md` §7), and
# (b) Windows CI until Servo-on-Windows lands as a follow-up PR.
default = []
servo = [
    "dep:servo",
    "dep:raw-window-handle",
    "dep:dpi",
    "dep:tracing",
    "dep:url",
    "dep:thiserror",
    "dep:image",
]

[dependencies]
capytain-core = { workspace = true }

# Optional — pulled in by the `servo` feature.
servo = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
dpi = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[dev-dependencies]
# Corpus harness (`tests/corpus.rs`) needs image to save PNGs, dpi for
# sizing, and sha2 for the reference-hash check.
dpi = { workspace = true }
image = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
