# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-search"
description = "QSL full-text search index built on Tantivy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
