# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-search"
description = "Search query parser for QSL: Gmail-style operators -> Tantivy query + structured filter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }

[lints]
workspace = true
