# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-smtp-client"
description = "QSL SMTP submission adapter over lettre."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
