# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-smtp-client"
description = "QSL SMTP submission adapter over lettre."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
lettre = { workspace = true }
qsl-core = { workspace = true }
qsl-telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
