# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-storage"
description = "Capytain storage layer: DbConn trait, migrations, and the blob store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
