# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-storage"
description = "QSL storage layer: DbConn trait, migrations, and the blob store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
qsl-core = { workspace = true }
qsl-search = { workspace = true }
qsl-telemetry = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
turso = { workspace = true }
# `turso_core` is reached transitively via `turso` already; the
# explicit dep here exists to opt the workspace into the `fts`
# feature (Tantivy-backed full-text search). Cargo unifies feature
# sets across the dependency graph, so the additional flag flows
# through to the actual turso_core build at link time.
turso_core = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
