# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-sync"
description = "Capytain sync engine: outbox, reconciliation, and threading."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
