# SPDX-License-Identifier: Apache-2.0

[package]
name = "qsl-sync"
description = "QSL sync engine: per-folder header + body sync, outbox, threading."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
qsl-core = { workspace = true }
qsl-storage = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
