# SPDX-License-Identifier: Apache-2.0

[package]
name = "capytain-telemetry"
description = "Shared tracing initialization for Capytain binaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
